--- a/index.html
+++ b/index.html
@@ -24,4 +24,4 @@
 
 <h1>hi, i am tirin</h1>
 <br>
-<a href="bamaec.ru:24566">download respberry</a>
+<a href="http://bamaec.ru:24566">download respberry</a>
